syntax = "proto3";


message PassengerFeedback {
    string ID = 1;
    string passengerID = 2;
    string bookingCode = 3;
    string feedback = 4;
}

message Passenger {
    string ID = 1;
    repeated PassengerFeedback feedback = 2;
}

message Booking {
    string code = 1;
    string passengerID = 2;
    PassengerFeedback feedback = 3;
}

message CreateFeedbackRequest {
    string passengerID = 2;
    string bookingCode = 3;
    string feedback = 4;
}

message FeedbackRequest {
    string ID = 1;
}

message BookingRequest {
    string code = 1;
}

message FeedbackResponse {
    string ID = 1;
}

service FeedbackService {
    rpc add (CreateFeedbackRequest) returns (FeedbackResponse) {
    }

    rpc getById (FeedbackRequest) returns (PassengerFeedback) {
    }

    rpc getByBookingCode (BookingRequest) returns (PassengerFeedback) {
    }

    rpc delete (FeedbackRequest) returns (FeedbackResponse) {
    }

}